# bg3-savefile-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPONENTS.md  DESIGN.md  FORMAT.md  LIMITS.md  PRODUCT.md  README.md  bg3_save_reader.py  biome.json  explore_lsmf.py  package-lock.json  package.json  pyproject.toml  quicksave-242-equipped-items.txt
.github/workflows/: ci.yml
.impeccable/: design.json
.impeccable/live/: config.json
bg3parser/: __init__.py  __main__.py  boosts.py  cli.py  discovery.py  effects.py  gamedata.py  lsf.py  lsmf.py  lspk.py  lsx.py  mcp_server.py  model.py  osiris.py  osiris_eval.py  osiris_rules.py  party.py  quest_analysis.py  quest_graph.py  render.py  report.py  report_views.py
bg3parser/templates/: character.txt.j2  level_items.txt.j2  limits.txt.j2  quests.txt.j2  report.txt.j2  save_info.txt.j2
data/: gamedata.json
docs/superpowers/plans/: 2026-06-12-boost-translation.md
docs/superpowers/specs/: 2026-06-12-boost-translation-design.md  2026-06-13-quest-dependency-graph-design.md
tests/: generate_gamedata.py  generate_parity.py  test_boosts.py  test_gamedata_lsx.py  test_osiris_eval.py  test_osiris_rules.py  test_parser.py  test_quest_analysis.py  test_quest_graph.py
tests/fixtures/: quicksave-242-equipped-items.txt
tests/fixtures/expected/: maia_all_sections.txt  maia_default.txt  shadowheart_default.txt
tests/parity/: autosave_shadowheart_tutorial.expected.json  honour_durge_nautiloid.expected.json  quicksave_286.expected.json  quicksave_291.expected.json  quicksave_292.expected.json  quicksave_294.expected.json  quicksave_296.expected.json  quicksave_302.expected.json  quicksave_328.expected.json  quicksave_341.expected.json  quicksave_maia.expected.json
ts/: README.md
ts/parser/: package.json  tsconfig.json
ts/parser/src/: gamedata.ts  index.ts  lsf.ts  lsmf.ts  lspk.ts  lz4.ts  model.ts  osiris.ts  party.ts
ts/parser/test/: lsf.test.ts  lsmf.test.ts  lspk.test.ts  parity.test.ts
ts/site/: index.html  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
ts/site/public/: effects.json  gamedata.json  manifest.webmanifest  sw.js
ts/site/src/: aiBriefing.ts  effects.ts  history.ts  labels.ts  main.ts  search.ts  styles.css  textReport.ts  watch.ts  worker.ts
ts/site/test/: aiBriefing.test.ts  effects.test.ts  search.test.ts
