[project]
name = "bg3-savefile-parser"
version = "0.1.0"
description = "Parse Baldur's Gate 3 save files and report character gear, spells, and quests"
license = { text = "MIT" }
authors = [{ name = "Daniel Finch", email = "daniel.samuels1@gmail.com" }]
requires-python = ">=3.11"
dependencies = ["zstandard", "lz4", "jinja2"]

[project.scripts]
bg3save = "bg3parser.cli:main"

[project.urls]
Homepage = "https://github.com/danielsamuels/bg3-savefile-parser"
Repository = "https://github.com/danielsamuels/bg3-savefile-parser"
Issues = "https://github.com/danielsamuels/bg3-savefile-parser/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bg3parser"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "ty"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "SIM", "UP", "PERF"]

[tool.ruff.format]
# The existing source file uses single quotes throughout; skip whole-file
# reformatting to avoid polluting git history with cosmetic changes.
quote-style = "single"

[tool.ty.environment]
python-version = "3.11"

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
